--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,22 @@
-# Environment Configuration
-# Copy this file to .env and fill in your values
+# Production Environment Variables
+# Copy this file to .env and customize for your environment
 
 # Server Configuration
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
-ADMIN_PASSWORD=change_this_secure_password
 
-# Security Settings
-EASYLIC_KEYS_DIR=./easylic/server
-LICENSE_FILE_PATH=./license.json
+# Security
+ADMIN_PASSWORD=change_this_secure_password
 
 # Logging
 LOG_LEVEL=INFO
-LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-LOG_FILE=easylic.log
 
-# Database (if needed in future)
-# DATABASE_URL=sqlite:///./easylic.db
+# Database/Storage (if needed in future)
+# DATABASE_URL=postgresql://user:pass@localhost/easylic
 
 # External Services
-# METRICS_ENDPOINT=http://localhost:9090
-# HEALTH_CHECK_INTERVAL=30
+# REDIS_URL=redis://localhost:6379
 
-# Development/Production mode
-ENVIRONMENT=production
-DEBUG=false
+# SSL/TLS (for nginx)
+# SSL_CERT_PATH=/etc/nginx/ssl/easylic.crt
+# SSL_KEY_PATH=/etc/nginx/ssl/easylic.key
