Fix generate_license endpoint to accept direct JSON body instead of payload wrapper
- Update GenerateLicenseRequest model to have direct fields
- Modify admin_handler to access fields directly
- Update routes, services, and start_service to use license_request parameter
- Update admin.html JS to send direct object
- Update README.md curl example to match new format
- Clean up imports and fix linting issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "easylic"
 version = "0.0.0"
-description = "THPL Easy Licensing"
-authors = [{name = "THPL"}]
+description = "TPHL Easy Licensing"
+authors = [{name = "TPHL"}]
 dependencies = [
     "click",
     "fastapi",
